
SUBDIRS = Bill_Daly_Ubuntu  \
        Dyalog-Keyboard     \
        Dirk                \
        fonts               \
        Juergen-Mint-19     \
        Juergen-Mint-21     \
        old-Keyboard        \
        OS-X-Keyboard       \
        Unicomp-Keyboard    \
        WASD-Keyboard       \
        105-key-International-Keyboard

dist_noinst_DATA = apl.vim

