
dist_doc_DATA =	
		APL_CGI.apl				\
		RUBIK.apl		        \
		SCRIPT.apl		        \
		SCRIPT1.apl		        \
		ScalarBenchmark.apl	    \
		Scalar2.apl		        \
		Scalar3.apl		        \
		Simple_SQL.apl	        \
		sudoku.apl		        \
		sudoku_DLX.apl

docdir = $(pkglibdir)/workspaces

distclean:

